tdf#91090 - avoid de-referencing DIALOG_NO_PARENT (-1)

Change-Id: I1032054765013a43744a7be548e892fc973a40ce